2013-08-16  Alex Mitchell <lexaay@gmail.com>

	* Path.java (probeContentType): Fix thinko.

2013-08-07  Per Bothner  <per@bothner.com>

	* Path.java (toNPath): New method - only if JAVA7 nio.
	(probeContentType): New method.
	* FilePath.java (toNPath): New method override.

2013-03-04  Per Bothner  <per@bothner.com>

	* ReportFormat.java (format): Generalize to write to Appendable.
	* CaseConvertFormat.java: Likewise.
	* IntegerFormat.java: Likewise.
	* PadFormat.java: Likewise.
	* CompoundFormat.java: Likewise.
	* FlushFormat.java: Likewise. Use Flushable.
	* LiteralFormat.java (text): Internally store String, not char[].

2013-02-21  Per Bothner  <per@bothner.com>

	* NamedCharTable.java: New utility class.
	* StandardNamedChars.java: New generated class.
	* Makefile.am: Update for new classes.
	Also add rule to generate StandardNamedChars.java.

2013-01-20  Per Bothner  <per@bothner.com>

	* Char.java (charNameValues): Replace char[] by String.
	(charNames, charNameValues): Add R7RS #\escape and #\null.
	(nameToChar, toScmReadableString): Update accordingly.
	(addNamedChars): New static function, used for
	Translator#standardEntities.

2012-12-26  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (readCodePoint, peekCodePoint):
	Four new methods - static and instance.
	* Lexer.java (readCodePoint): New method.
	(readUnicodeChar): Deprecate - reimplement using new
	LineBufferedReader#readCodePoint.

	* Char.java (readExternal): Fix off-by-one bug in surrogate handling.

2012-11-28  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (IS_CLOSED): New constant.
	(close): Set IS_CLOSED.  Don't crash if already closed.
	(isOpen): New method.

2012-11-27  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (EOF_SEEN): New constant.
	(fill): Make protected instead of public.  Natbe set EOF_SEEN.
	(sourceReady): New proected method.
	(ready): Return true if EOF_SEEN.  Use sourceReady.